colocando todas as areas

--- a/Entre Caçadores, Colossos e Baldurianos/public/antiga.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/antiga.html
@@ -1,63 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
 
-<div class="conteudo">
-    <div class="yharnam antiga">
-        <h2>Antiga Yharnam</h2>
-        <div class="container">
-            <p class="descricaoJogo">
-                Selada e queimada para conter a praga das bestas, a Antiga Yharnam é um lembrete brutal do que Yharnam teme se tornar. Suas ruas em ruínas e construções carbonizadas revelam os vestígios de uma tragédia sem retorno. O jogador é alertado logo ao chegar: “Volte! Essa é uma terra de bestas, e você não é bem-vindo.” É aqui que o passado de Yharnam ganha forma, mostrando que o sangue que dá poder também condena. A atmosfera é sufocante, marcada por fuligem e criaturas violentas que foram deixadas para trás — ou sobreviveram à purificação pelo fogo.
-            </p>
+    <div class="navBloodborne">
+        <div class="discernimento">
+            <div id="div_discernimento"></div>
+            <img src="./assets/imagens/bloodborne/bloodborne_discernimento.png" alt="">
         </div>
     </div>
 
-    <div class="mecanica">
-        <h2>Inimigos</h2>
-        <div class="container">
-            <div>
-                <img src="./assets/imagens/bloodborne/bloodborne_beast1.png">
-                <img src="./assets/imagens/bloodborne/bloodborne_beast2.png">
-            </div>
-            <p>
-                A Antiga Yharnam está infestada por bestas ferozes e deformadas, incluindo criaturas ágeis que atacam em grupos, lobos enlouquecidos pelo sangue e bestas flamejantes que surgem das sombras. Cada esquina há emboscadas, tornando o avanço imprevisível. O fogo é constante — tanto como elemento ambiental quanto arma usada contra o jogador.
-            </p>
-        </div>
-    </div>
 
-    <div class="mecanica">
-        <h2>Djura, o Caçador</h2>
-        <div class="container">
-            <p>
-                Djura é um caçador que se recusa a abandonar a Antiga Yharnam. Posicionado em uma torre com uma metralhadora, ele ataca qualquer um que se aproxime, tentando proteger as bestas sobreviventes da extinção. Ao contrário dos demais caçadores, Djura demonstra empatia pelas criaturas, vendo nelas mais do que apenas monstros. Sua presença impõe um desafio único, tanto moral quanto físico.
-            </p>
-            <div>
-                <img src="./assets/imagens/bloodborne/djura1.png">
-                <img src="./assets/imagens/bloodborne/djura2.png">
+    <div class="conteudo">
+        <div class="yharnam antiga">
+            <h2>Antiga Yharnam</h2>
+            <div class="container">
+                <p class="descricaoJogo">
+                    Selada e queimada para conter a praga das bestas, a Antiga Yharnam é um lembrete brutal do que
+                    Yharnam teme se tornar. Suas ruas em ruínas e construções carbonizadas revelam os vestígios de uma
+                    tragédia sem retorno. O jogador é alertado logo ao chegar: “Volte! Essa é uma terra de bestas, e
+                    você não é bem-vindo.” É aqui que o passado de Yharnam ganha forma, mostrando que o sangue que dá
+                    poder também condena. A atmosfera é sufocante, marcada por fuligem e criaturas violentas que foram
+                    deixadas para trás — ou sobreviveram à purificação pelo fogo.
+                </p>
             </div>
         </div>
-    </div>
 
-    <div class="mecanica">
-        <h2>Boss: Besta Sedenta de Sangue</h2>
-        <div class="container">
-            <p>
-                No fundo da Antiga Yharnam, a Besta Sedenta de Sangue aguarda. Uma criatura corrompida pela hemorragia, ela se move com ferocidade, liberando nuvens venenosas e ataques frenéticos. A batalha exige resistência, paciência e cautela, reforçando a mensagem da área: o sangue, quando fora de controle, devora tudo ao redor.
-            </p>
-            <div>
-                <img src="./assets/imagens/bloodborne/blood-starved-beast1.png">
-                <img src="./assets/imagens/bloodborne/blood-starved-beast2.png">
+        <div class="mecanica">
+            <h2>Inimigos</h2>
+            <div class="container">
+                <div>
+                    <img src="./assets/imagens/bloodborne/bloodborne_paciente.png">
+                    <img src="./assets/imagens/bloodborne/bloodborne_lobao.png">
+                </div>
+                <p>
+                    A Antiga Yharnam está infestada por bestas ferozes e deformadas, incluindo criaturas ágeis que
+                    atacam em grupos, lobos enlouquecidos pelo sangue e bestas flamejantes que surgem das sombras. Cada
+                    esquina há emboscadas, tornando o avanço imprevisível. O fogo é constante — tanto como elemento
+                    ambiental quanto arma usada contra o jogador.
+                </p>
+            </div>
+        </div>
+
+        <div class="mecanica">
+            <h2>Djura, o Caçador</h2>
+            <div class="container">
+                <p>
+                    Djura é um caçador que se recusa a abandonar a Antiga Yharnam. Posicionado em uma torre com uma
+                    metralhadora, ele ataca qualquer um que se aproxime, tentando proteger as bestas sobreviventes da
+                    extinção. Ao contrário dos demais caçadores, Djura demonstra empatia pelas criaturas, vendo nelas
+                    mais do que apenas monstros.
+                </p>
+                <div>
+                    <img src="./assets/imagens/bloodborne/bloodborne_djura2.png">
+                    <img src="./assets/imagens/bloodborne/bloodborne_djura.png">
+                </div>
+            </div>
+        </div>
+
+        <div class="mecanica">
+            <h2>Besta Sedenta de Sangue</h2>
+            <div class="container">
+                <div class="coluna">
+                    <p>
+                        No fundo da Antiga Yharnam, a Besta Sedenta de Sangue aguarda. Uma criatura corrompida pela
+                        hemorragia, ela se move com ferocidade, liberando nuvens venenosas e ataques frenéticos. A
+                        melhor recomendação é ter pílulas contra veneno e alguma forma de incendiar a fera.
+                    </p>
+                    <br><br><br>
+                    <button class="botao" onclick="derrotar()">Derrotar</button>
+                </div>
+                <div>
+                    <img src="./assets/imagens/bloodborne/bloodborne_sedenta.png">
+                    <img src="./assets/imagens/bloodborne/bloodborne_sedenta2.png">
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 </body>
+
 </html>
+
+<script>
+
+    var discernimento = parseInt(sessionStorage.getItem('discernimento')) || 0;
+    div_discernimento.innerHTML = discernimento;
+
+    function derrotar() {
+        if (discernimento >= 5) {
+            return
+        } else {
+            discernimento++;
+            div_discernimento.innerHTML = discernimento;
+            sessionStorage.setItem('discernimento', discernimento);
+        }
+    }
+
+
+</script>
