--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Bloodborne</title>
 </head>
 
 <body class="indexBloodborne">
@@ -25,6 +25,9 @@
             </li>
             <li>
                 <a href="cadastro.html">Cadastro</a>
+            </li>
+            <li>
+                <a href="./dashboard/dashboard.html">Perfil</a>
             </li>
         </div>
 
@@ -244,11 +247,9 @@
 
         <div class="simulacao">
 
-            <h2>Imersao</h2>
+            <h2>Quiz</h2>
             <div class="container">
-                Para uma maior imersão ao universo do jogo, onde não há uma explicação clara sobre o caminho, foi
-                preparado uma silumação das funcionalidades do jogo, mostrando diferentes finais e acontecimentos do
-                jogo.
+                Para testar os conhecimento de veteranos — ou para quem se aveturou no site 5 — foi preparado um quiz, seu desenpenho será registrado no seu perfil.
 
                 <button class="botao" onclick="iniciar()">Iniciar</button>
             </div>
