--- a/Entre Caçadores, Colossos e Baldurianos/public/dream.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/dream.html
@@ -12,6 +12,7 @@
 <body class="pgBloodborne">
 
     <div class="navBloodborne">
+        <a href="bloodborne.html">Voltar</a>
         <div class="discernimento">
             <div id="div_discernimento"></div>
             <img src="./assets/imagens/bloodborne/bloodborne_discernimento.png" alt="">
