--- a/Entre Caçadores, Colossos e Baldurianos/public/index.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/index.html
@@ -11,25 +11,25 @@
 <body>
 
 
+
+
     <div class="nav">
 
-        <li class="navegacao">
-            <a href="#">Inicial</a>
-        </li>
-        <li>
-            <a href="login.html">Login</a>
-        </li>
-        <li>
-            <a href="cadastro.html">Cadastro</a>
-        </li>
 
-        <h1>A Beleza do Desconhecido</h1>
+        <h1>A Arte do Desconhecido</h1>
 
-        <div>
-
-            <hr>
-
+        <div class="navegacao">
+            <li>
+                <a href="index.html">Inicial</a>
+            </li>
+            <li>
+                <a href="login.html">Login</a>
+            </li>
+            <li>
+                <a href="cadastro.html">Cadastro</a>
+            </li>
         </div>
+
 
     </div>
 
@@ -44,16 +44,10 @@
             <div class="homemLeao">
 
                 <img src="./assets/imagens/homem_leao.png">
-                <p class="descricaoJogo">Há 40 mil anos, houve a primeira obra de arte registrada pelo homem. <br><br>
-                    O Homem-Leão é a escultura mais antiga conhecida. Um exemplo de arte antropozoomórfica, inteiramente
-                    esculpida com ferramentas de pedra. <br><br>
-                    Mais do que uma escultura, o Homem-Leão representa o primeiro registro do ser humano olhando além da
-                    sobrevivência. Pela primeira vez, tempo, energia e recursos foram dedicados não à caça, não à
-                    defesa, mas àquilo que só a mente humana é capaz de fazer: imaginar. Criar algo que não existe, unir
-                    homem e fera, e dar forma ao invisível. A arte nascia ali - como um reflexo do que somos por dentro.
-                    <br><br>
-                    Assim como o Homem-Leão marcou o início da arte como forma de expressão, os jogos como Bloodborne,
-                    Shadow of the Colossus e Baldur's Gate 3 mostram como a tecnologia atual continua esse legado. Eles
+                <p class="descricaoJogo"><br><br><br><br>Há 40 mil anos, houve a primeira obra de arte registrada pelo homem. <br><br>
+                
+                    Assim como o Homem-Leão marcou o início da arte como forma de expressão, os jogos como Bloodborne e
+                    Shadow of the Colossus mostram como a tecnologia atual continua esse legado. Eles
                     são exemplos de como ainda usamos tempo, esforço e criatividade para imaginar mundos, contar
                     histórias e expressar sentimentos. Cada de uma maneira única diferente.
                 </p>
