--- a/Entre Caçadores, Colossos e Baldurianos/public/quiz.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/quiz.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="conteudo">
+        <a href="bloodborne.html">Voltar</a>
         <div class="quiz">
 
             <h1>Quiz</h1>
