--- a/Entre Caçadores, Colossos e Baldurianos/public/colossus.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/colossus.html
@@ -11,6 +11,27 @@
 
 <body>
 
+    
+    <div class="nav">
+
+
+        <h1>A Arte do Desconhecido</h1>
+
+        <div class="navegacao">
+            <li>
+                <a href="index.html">Inicial</a>
+            </li>
+            <li>
+                <a href="login.html">Login</a>
+            </li>
+            <li>
+                <a href="cadastro.html">Cadastro</a>
+            </li>
+        </div>
+
+
+    </div>
+
     <div class="conteudo">
 
         <div class="introColossus">
