--- a/Entre Caçadores, Colossos e Baldurianos/public/pthumeru.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/pthumeru.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pthumeru</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
     <div class="navBloodborne">
+        <a href="bloodborne.html">Voltar</a>
         <div class="discernimento">
             <div id="div_discernimento"></div>
             <img src="./assets/imagens/bloodborne/bloodborne_discernimento.png" alt="">
@@ -105,6 +106,7 @@
             discernimento += 3;
             div_discernimento.innerHTML = discernimento;
             sessionStorage.setItem('discernimento', discernimento);
+
         }
     }
 
