--- a/Entre Caçadores, Colossos e Baldurianos/public/yahargul.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/yahargul.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yahar'Gul</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
         <div class="navBloodborne">
+            <a href="bloodborne.html">Voltar</a>
         <div class="discernimento">
             <div id="div_discernimento"></div>
             <img src="./assets/imagens/bloodborne/bloodborne_discernimento.png" alt="">
@@ -115,8 +117,11 @@
 
 </html>
 
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 <script>
 
+    const id = Number(sessionStorage.ID_USUARIO);
     var discernimento = parseInt(sessionStorage.getItem('discernimento')) || 0;
     div_discernimento.innerHTML = discernimento;
 
@@ -127,6 +132,26 @@
             discernimento += 2;
             div_discernimento.innerHTML = discernimento;
             sessionStorage.setItem('discernimento', discernimento);
+
+            fetch(`/conquista/registrar/${id}`, {
+                method: 'POST',
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    idConquista: 13
+                })
+            }).then(resposta => {
+                if (resposta.ok) {
+                    console.log("Conquista registrada");
+                }
+            });
+            Toastify({
+                text: "Conquista desbloqueada!",
+                duration: 3000,
+                style: {
+                    background: "linear-gradient(to right, #555, #888)"
+
+                },
+            }).showToast();
         }
     }
 
